2000-10-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-process-type): Change default valule to 'start-process.
	(w3m-process-user-counter): New buffer local variable.
	(w3m-exec-get-user): New funciton, get user and passwd from
	w3m-arrived-user-list.
	(w3m-exec-filter): Use w3m-exec-get-user().

2000-10-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-previous-point): New function.
	(w3m-expand-url): If BASE is nil, it set "".
	(w3m-download-this-url): w3m-refontify-anchor() exec when finished
	download.

2000-10-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-arrived-ct-file, w3m-arrived-file-cs,
	w3m-always-html-url-regex): New variables.
	(w3m-process-type): Change name from w3m-exec-process-type.
	(w3m-refontify-anchor): New funcition.
	(w3m-exec): Pre-check content-type.
	(w3m-exec-w3m-ctcheck): New funcition, check context-type for URL.
	(w3m-exec-w3m): New funcion, execute w3m.
	(w3m-exec-ftp): New function, execute dired-other-window() or
	copy-file(), if URL is 'ftp://'.
	(w3m-convert-ftp-to-emacsen): Change 'ftp://' to '/user@host:/' from
	elisp ML.
	(w3m-download-this-url, w3m-save-image, w3-view-image): Use w3
	features.
	
2000-10-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top-level): Add authors.
	(w3m-expand-url): Check relative URL first.
	(w3m-fontify): Add original text properties when replace 'escaped
	character'.

2000-10-11  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mailto-url-function, w3m-use-cygdrive,
	w3m-default-save-dir, w3m-arrived-list-file, w3m-arrived-list-keep,
	w3m-arrived-anchor-face, w3m-exec-process-type,
	w3m-process-connection-type, w3m-arrived-anchor-list):
	New user custumize variables.
	(w3m-mode): Change doc-string for key binding.
	(w3m-arrived-list-add, w3m-arrived-list-load, w3m-arrived-list-save):
	New functions for handling arrived anchor.
	(w3m-fontify): Add arrived anchor face.
	(w3m-exec-process, w3m-exec-filter, w3m-exec-sentinel): New functions